--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "flowbite": "^1.6.6",
+    "flowbite-react": "^0.4.9",
+    "i": "^0.3.7",
     "next": "13.4.7",
+    "next-themes": "^0.2.1",
+    "npm": "^9.7.2",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
