--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flowbite-react": "^0.4.9",
     "i": "^0.3.7",
     "next": "13.4.7",
+    "next-auth": "^4.22.3",
     "next-themes": "^0.2.1",
     "npm": "^9.7.2",
     "postcss": "8.4.24",
