--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.4.7",
     "next-auth": "^4.22.3",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.4",
     "npm": "^9.7.2",
     "postcss": "8.4.24",
     "react": "18.2.0",
