✨ feat(login page): login handle routes

--- a/.env
+++ b/.env
@@ -1,5 +1,15 @@
+#API
+AUTH_API=http://localhost:3001
+POST_API=http://localhost:3005
+FEED_API=http://localhost:3002
+GATEWAY=http://localhost:8888
+
+
 #Google Credentials
 GOOGLE_ID=539157000277-eb9o3eu1pa5kuheosners4mocbp1b463.apps.googleusercontent.com
 GOOGLE_SECRET=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
+
+
+
 
 #Next Auth
