--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.9",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.7",
     "next-auth": "^4.22.3",
     "next-themes": "^0.2.1",
