--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.7",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.9",
+    "heroicons": "^2.0.18",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
