--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "rxjs": "^7.8.1",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "file-loader": "^6.2.0"
   }
 }
