--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "npm": "^9.7.2",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-chat-engine-pretty": "^0.1.8",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
     "rxjs": "^7.8.1",
